* gc.c (init_heap): set default to heap slots length   if HEAP_OBJ_LIMIT is larger than HEAP_MIN_SLOTS. [Bug #1310]   (set_heaps_increment): increment next_heaps_length if   next_heaps_length and heaps_used are same.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@23037 b2dd03c8-39d4-4d8f-98ff-823fe69b080e